--- a/src/main/resources/static/admin/supplier_orders/css/detail.css
+++ b/src/main/resources/static/admin/supplier_orders/css/detail.css
@@ -139,3 +139,11 @@
 .modal-close-btn:hover {
     background-color: #999;
 }
+
+.limit-lines {
+	display: -webkit-box;
+	-webkit-box-orient: vertical;
+	-webkit-line-clamp: 1;
+	overflow: hidden;
+	text-overflow: ellipsis;
+}
