--- a/src/main/resources/templates/admin/inventory_log/inventoryLogDetail.html
+++ b/src/main/resources/templates/admin/inventory_log/inventoryLogDetail.html
@@ -49,7 +49,7 @@
 				<div class="isbn-data">
 					<span>[[${info.log_detail_isbn}]]</span>
 				</div>
-				<div class="book-title-data">
+				<div class="book-title-data limit-lines">
 					<span>[[${info.log_detail_title}]]</span>
 				</div>
 				<div class="qty-data">
