--- a/src/main/resources/templates/admin/supplier_orders/supplierDetail.html
+++ b/src/main/resources/templates/admin/supplier_orders/supplierDetail.html
@@ -53,7 +53,7 @@
                     <div class="no-data">
                         <span th:text="${status.count}"></span>
                     </div>
-                    <div class="book-title-data">
+                    <div class="book-title-data limit-lines">
                         <span th:text="${info.order_detail_title}"></span>
                     </div>
                     <div class="isbn-data">
