--- a/src/main/resources/templates/user/mypage/review/writeReview.html
+++ b/src/main/resources/templates/user/mypage/review/writeReview.html
@@ -29,7 +29,7 @@
 			        <i class="star fas fa-star" data-rating="3"></i>
 			        <i class="star fas fa-star" data-rating="4"></i>
 			        <i class="star fas fa-star" data-rating="5"></i>
-			        <span class="rating-value" style="display: block; text-align: center">5/5</span>
+			        <span class="rating-value" style="display: block; text-align: center; margin-top: 5px">5/5</span>
 		      	</div>
 		   		<input type="hidden" th:name="review_rating" value="5">
 		   	</div>
