--- a/src/main/resources/templates/user/registration/registration.html
+++ b/src/main/resources/templates/user/registration/registration.html
@@ -121,7 +121,7 @@
 
         <div class="agreement">
             <input type="radio" name="agree-terms" id="agree-terms"/>
-            <label for="agree-terms">이용 약관 동의</label>
+            <label for="agree-terms">이용 약관 동의 (선택)</label>
         </div>
         <div class="btn-wrap">
             <button type="submit" id="reg-button" class="default-btn long">가입</button>
