--- a/src/main/resources/static/user/registration/css/registration.css
+++ b/src/main/resources/static/user/registration/css/registration.css
@@ -21,6 +21,7 @@ h3:not(.terms-title) {
 .agreement {
     display: flex;
     align-items: center;
+    gap: 5px;
     padding: 20px 50px;
     font-size: 14px;
     text-align: center;
@@ -308,7 +309,7 @@ input.nomal, .form-item.nomal::before {
 
 .terms-modal-content {
     width: 400px;
-    margin: 15% auto;
+    margin: 5% auto;
     background-color: #fff;
     border: 1px solid #c0c0c0;
     border-radius: 10px;
