--- a/src/main/resources/templates/mobile/dispatch/dispatch.html
+++ b/src/main/resources/templates/mobile/dispatch/dispatch.html
@@ -8,23 +8,9 @@
     <link rel="stylesheet" href="/mobile/dispatch/css/dispatch.css" />
     
 <div class="mobile-inner" style="gap: 2.3rem;">
-    <h3 class="menu-title">출고하기</h3>
+	<h3 class="menu-title">출고하기</h3>
     <div class="white-frame home-first-menu">
-        <div class="cnt" id="A-01" th:value="A-01">A01</div>
-        <div class="cnt" id="A-02" th:value="A-02">A02</div>
-        <div class="cnt" id="A-03" th:value="A-03">A03</div>
-        <div class="cnt" id="A-04" th:value="A-04">A04</div>
-        <div class="cnt" id="A-05" th:value="A-05">A05</div>
-        <div class="cnt" id="B-01" th:value="B-01">B01</div>
-        <div class="cnt" id="B-02" th:value="B-02">B02</div>
-        <div class="cnt" id="B-03" th:value="B-03">B03</div>
-        <div class="cnt" id="B-04" th:value="B-04">B04</div>
-        <div class="cnt" id="B-05" th:value="B-05">B05</div>
-        <div class="cnt" id="C-01" th:value="C-01">C01</div>
-        <div class="cnt" id="C-02" th:value="C-02">C02</div>
-        <div class="cnt" id="C-03" th:value="C-03">C03</div>
-        <div class="cnt" id="C-04" th:value="C-04">C04</div>
-        <div class="cnt" id="C-05" th:value="C-05">C05</div>
+        <div th:each="item : ${menuItems}" class="cnt" th:id="${item}" th:value="${item}" th:text="${item}"></div>
     </div>
 <!-- 출고하기 버튼을 누르면 check box 체크되어있는것들의 isbn을 form으로 보내준다 그리고 그값들을  
 받아 서치한후 리스트 출력 (제목, isbn, 날짜, 수량(내가 입력할수있어야함 그러나 이미 들어있는 갯수를 넘어가면 안됨) 
