--- a/src/main/resources/templates/admin/products/edit-product.html
+++ b/src/main/resources/templates/admin/products/edit-product.html
@@ -145,7 +145,7 @@
                         <img th:if="${product_detail.book_thumbnail_changed != null and !product_detail.book_thumbnail_changed.isEmpty()}"
                              th:src="@{/images/books/{products}/(products=${product_detail.book_thumbnail_changed != null ? product_detail.book_thumbnail_changed : 'noimg.png'})}"
                              alt="책썸네일"
-                             id="preview"/>
+                             id="preview" onerror="this.onerror=null; this.src='/admin/common/img/products/noimg.png';" />
                     </label>
                     <input type="file" name="thumbnail_img_file" id="input-file" class="input-img-file" accept="image/jpeg, image/png, image/jpg" />
                 </div>
