--- a/src/main/resources/static/user/mypage/inquiries/css/inquiries.css
+++ b/src/main/resources/static/user/mypage/inquiries/css/inquiries.css
@@ -5,6 +5,7 @@
     align-items: center;
     justify-content: space-between;
     margin-bottom: 10px;
+	cursor: pointer;
 }
 
 .inquiry-first-content {
