--- a/src/main/resources/templates/user/members/findId.html
+++ b/src/main/resources/templates/user/members/findId.html
@@ -2,7 +2,7 @@
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>고래문고</title>
+    <title>WHALE BOOKS</title>
     <link rel="shortcut icon" th:href="@{/user/common/imgs/favicon.ico}" type="image/x-icon">
     <link rel="stylesheet" href="/user/common/css/reset.css">
     <link rel="stylesheet" href="/user/common/css/common.css"/>
