--- a/src/main/resources/static/user/members/css/findPw-modifyPw.css
+++ b/src/main/resources/static/user/members/css/findPw-modifyPw.css
@@ -1,23 +1,34 @@
-body {
-    font-family: 'Arial', sans-serif;
-    display: flex;
-    height: 100vh;
-    margin: 0;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    font-weight: 600;
+/*body {*/
+/*    font-family: 'Arial', sans-serif;*/
+/*    display: flex;*/
+/*    height: 100vh;*/
+/*    margin: 0;*/
+/*    flex-direction: column;*/
+/*    align-items: center;*/
+/*    justify-content: center;*/
+/*    font-weight: 600;*/
+/*}*/
+
+#pw-modify-container {
+    width: 400px;
+    margin: 150px auto;
+}
+
+#pw-modify-container > a {
+    display: block;
+    width: 311px;
+    height: 60px;
+    margin: 0 auto 50px;
 }
 
 .showFindPw-frame {
-     text-align: center;
+    margin: 0 auto;
     background-color: white;
-    padding: 40px 30px;
     border-radius: 10px;
-    width: 360px;
+    width: 380px;
     display: flex;
     flex-direction: column;
-    align-items: center; 
+    align-items: center;
 }
 
 .showFindPw-frame img.mainlogo {
@@ -25,27 +36,24 @@ body {
     margin-bottom: 30px;
 }
 
-h3 {
+.showFindPw-frame > h3 {
+    width: 100%;
     font-size: 16px;
     color: #333;
-    margin-bottom: 20px;
-    font-weight: normal;
+    margin-bottom: 40px;
+    font-weight: 600;
     text-align: left;
-    border-bottom: 1px solid #d9d9d9; 
+    border-bottom: 1px solid #d9d9d9;
     padding-bottom: 20px;
-    font-weight: 900;
+}
+
+#modifyPwForm {
     width: 100%;
 }
 
-button {
-    width: 170px;
-    padding: 10px;
-    font-size: 14px;
-    border: 1px solid #d9d9d9;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: background-color 0.3s, opacity 0.3s;
-    margin-top: 20px;
+#submitBtn {
+    width: 380px;
+    margin-top: 30px;
 }
 
 .form-item {
@@ -56,10 +64,13 @@ button {
     min-height: 45px;
     padding: 0 10px;
     border: 1px solid #C0C0C0;
-    width: 340px;
     border-radius: 6px;
     margin-top: 5px;
-    margin-bottom :10px;
+    margin-bottom: 10px;
+}
+
+.form-item.pw {
+    margin-bottom: 30px;
 }
 
 input:not([type="radio"]) {
@@ -68,24 +79,23 @@ input:not([type="radio"]) {
     width: 100%;
     font-size: 14px;
     line-height: 22px;
-    font-weight: 600;
     color: #222;
     border: none;
 }
 
 #loginBtn {
-	background-color: white;
-	color: #845EC2;
+    background-color: white;
+    color: #845EC2;
     border: 1px solid #845EC2;
 }
 
 label {
-    width: 100%; 
-    text-align: left; 
+    width: 100%;
+    text-align: left;
     margin-bottom: 5px;
     font-size: 14px;
     color: #555;
-    display: block; 
+    display: block;
 }
 
 #loginBtn {
@@ -97,12 +107,12 @@ label {
 .button-group {
     display: flex;
     flex-direction: column;
-    align-items: center; 
-    width: 100%; 
+    align-items: center;
+    width: 100%;
 }
-    
+
 .password-modify-comment {
-	color: red;
-	font-size: 12px;
-	text-align: left;
+    color: red;
+    font-size: 12px;
+    text-align: left;
 }
