--- a/src/main/resources/static/user/products/css/detail.css
+++ b/src/main/resources/static/user/products/css/detail.css
@@ -418,6 +418,11 @@
     margin-bottom: 0;
 }
 
+.refund-info-content {
+    padding: 0 10px 5px;
+    font-size: 15px;
+}
+
 .refund-info-list {
     padding: 30px 0;
     border-bottom: 1px solid #C0C0C0;
@@ -429,11 +434,11 @@
 }
 
 .warning-info-box {
-    width: 100%;
     border-radius: 10px;
     padding: 30px 0 30px 30px;
     background-color: #FAFAFA;
     color: #7E7E7E;
+    font-size: 14px;
 }
 
 .number {
