--- a/src/main/resources/templates/user/main/products/detail.html
+++ b/src/main/resources/templates/user/main/products/detail.html
@@ -239,11 +239,11 @@
             <div class="refund-info-list">
                 <p class="refund-info-title">반품/교환 불가 사유</p>
                 <p class="refund-info-content">1) 소비자의 책임 있는 사유로 상품 등이 손실 또는 훼손된 경우</p>
-                <p class="refund-info-content">(단지 확인을 위한 포장 훼손은 제외)</p>
+                <p class="refund-info-content" style="text-indent: 16px">(단지 확인을 위한 포장 훼손은 제외)</p>
                 <p class="refund-info-content">2) 소비자의 사용, 포장 개봉에 의해 상품 등의 가치가 현저히 감소한 경우</p>
-                <p class="refund-info-content">예) 화장품, 식품, 가전제품(악세서리 포함) 등</p>
+                <p class="refund-info-content" style="text-indent: 16px">예) 화장품, 식품, 가전제품(악세서리 포함) 등</p>
                 <p class="refund-info-content">3) 복제가 가능한 상품 등의 포장을 훼손한 경우</p>
-                <p class="refund-info-content">예) 음반/DVD/비디오, 소프트웨어, 만화책, 잡지, 영상 화보집</p>
+                <p class="refund-info-content" style="text-indent: 16px">예) 음반/DVD/비디오, 소프트웨어, 만화책, 잡지, 영상 화보집</p>
                 <p class="refund-info-content">4) 소비자의 요청에 따라 개별적으로 주문 제작되는 상품의 경우 ((1)해외주문도서)</p>
                 <p class="refund-info-content">5) 디지털 컨텐츠인 ebook, 오디오북 등을 1회이상 ‘다운로드’를 받았거나 '바로보기'로 열람한 경우</p>
                 <p class="refund-info-content">6) 시간의 경과에 의해 재판매가 곤란한 정도로 가치가 현저히 감소한 경우</p>
@@ -254,12 +254,12 @@
                 <p class="refund-info-title">상품품절</p>
                 <p class="refund-info-content">공급사(출판사) 재고 사정에 의해 품절/지연될 수 있으며, 품절 시 관련 사항에 대해서는 이메일과 문자로 안내드리겠습니다.</p>
             </div>
-            <div class="refund-info-list">
-                <p class="refund-info-title">소비자 피해보상 환불 지연에 따른 배상</p>
-                <p class="refund-info-content">1) 상품의 불량에 의한 교환, A/S, 환불, 품질보증 및 피해보상 등에 관한 사항은 소비자분쟁 해결 기준 (공정거래위원회
-                    고시)에 준하여 처리됨</p>
-                <p class="refund-info-content">2) 대금 환불 및 환불지연에 따른 배상금 지급 조건, 절차 등은 전자상거래 등에서의 소비자 보호에 관한 법률에 따라 처리함</p>
-            </div>
+            <ul class="refund-info-list">
+                <li class="refund-info-title">소비자 피해보상 환불 지연에 따른 배상</li>
+                <li class="refund-info-content">1) 상품의 불량에 의한 교환, A/S, 환불, 품질보증 및 피해보상 등에 관한 사항은 소비자분쟁 해결 기준 <p style="text-indent: 16px">(공정거래위원회
+                    고시)에 준하여 처리됨</p></li>
+                <li class="refund-info-content">2) 대금 환불 및 환불지연에 따른 배상금 지급 조건, 절차 등은 전자상거래 등에서의 소비자 보호에 관한 법률에 따라 처리함</li>
+            </ul>
         </section>
 
         <div class="warning-info-box">
