--- a/src/main/resources/static/user/common/css/common.css
+++ b/src/main/resources/static/user/common/css/common.css
@@ -2,7 +2,7 @@
     width: 1280px;
     margin: 20px auto 100px;
     height: 100%;
-    min-height: 100%;
+    min-height: calc(100vh - 650px);
     padding: 0 55px;
 }
 /* 버튼들 */
