--- a/src/main/resources/templates/mobile/login/login.html
+++ b/src/main/resources/templates/mobile/login/login.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8" name="viewport"
-          content="width=device-width, initial-scale=1, maximum-scale=1.0,
-    user-scalable=0">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WHALE BOOKS 모바일</title>
     <link rel="stylesheet" href="/mobile/common/css/reset.css"/>
     <link rel="stylesheet" href="/mobile/login/css/login.css"/>
