--- a/src/main/resources/static/admin/notice/css/noticeReg.css
+++ b/src/main/resources/static/admin/notice/css/noticeReg.css
@@ -5,7 +5,7 @@
 
 .info {
 	display: grid;
-	grid-template-columns: 100px 1fr;
+	grid-template-columns: auto 1fr;
 	align-items: center;
 	gap: 10px;
 	border-bottom: 1px solid #D8D8D8;
