--- a/src/main/resources/static/admin/products/css/products.css
+++ b/src/main/resources/static/admin/products/css/products.css
@@ -39,13 +39,12 @@
 /*    width: 110px;*/
 /*}*/
 
-.book-isbn-link  {
-    display: block;
-    text-decoration: underline;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-}
+/*.book-isbn-link  {*/
+/*    display: block;*/
+/*    overflow: hidden;*/
+/*    text-overflow: ellipsis;*/
+/*    white-space: nowrap;*/
+/*}*/
 
 .text-ellipsis {
     white-space: nowrap;
