--- a/src/main/resources/static/mobile/login/css/login.css
+++ b/src/main/resources/static/mobile/login/css/login.css
@@ -1,14 +1,10 @@
-html {
-	font-size: inherit;
-}
-
 #login-container {
 	margin-top: 50px;
 	padding: 0 4rem;
 }
 
 .logo-wrap {
-	margin: 10rem 0;
+	margin: 10rem 0 5rem;
 	height: 8rem;
 }
 
@@ -73,4 +69,5 @@ html {
 	color: #E54F53;
 	font-size: 1.4rem;
 	text-align: center;
+	margin-bottom: 20px;
 }
