--- a/src/main/resources/static/admin/notice/css/noticeReg.css
+++ b/src/main/resources/static/admin/notice/css/noticeReg.css
@@ -31,7 +31,7 @@
 .editor {
 	width: 100%;
 	height: 500px;
-	padding: 10px;
+	padding: 10px 10px 25px;
 	border: 1px solid #D8D8D8;
 	border-radius: 5px;
 	background-color: #f8f8f8;
@@ -66,7 +66,7 @@
 .char-count {
 	position: absolute;
 	bottom: 10px;
-	right: 10px;
+	right: 30px;
 }
 
 .char-count span {
